fix(olm): add versions field to 0.0.2 crd manifests

--- a/deploy/converged/olm-catalog/kubevirt-hyperconverged/0.0.2/kwebui.crd.yaml
+++ b/deploy/converged/olm-catalog/kubevirt-hyperconverged/0.0.2/kwebui.crd.yaml
@@ -12,3 +12,7 @@ spec:
     singular: kwebui
   scope: Cluster
   version: v1alpha1
+  versions:
+  - name: v1alpha1
+    served: true
+    storage: true
