--- a/deploy/converged/olm-catalog/kubevirt-hyperconverged/0.0.2/kubevirt.crd.yaml
+++ b/deploy/converged/olm-catalog/kubevirt-hyperconverged/0.0.2/kubevirt.crd.yaml
@@ -23,3 +23,7 @@ spec:
     singular: kubevirt
   scope: Namespaced
   version: v1alpha3
+  versions:
+  - name: v1alpha3
+    served: true
+    storage: true
