--- a/deploy/converged/olm-catalog/kubevirt-hyperconverged/0.0.1/node-labeller-bundles.crd.yaml
+++ b/deploy/converged/olm-catalog/kubevirt-hyperconverged/0.0.1/node-labeller-bundles.crd.yaml
@@ -11,5 +11,9 @@ spec:
     singular: kubevirtnodelabellerbundle
   scope: Namespaced
   version: v1
+  versions:
+  - name: v1
+    served: true
+    storage: true
   subresources:
     status: {}
