--- a/deploy/converged/olm-catalog/kubevirt-hyperconverged/0.0.1/kubevirt-hyperconverged-operator.v0.0.1.clusterserviceversion.yaml
+++ b/deploy/converged/olm-catalog/kubevirt-hyperconverged/0.0.1/kubevirt-hyperconverged-operator.v0.0.1.clusterserviceversion.yaml
@@ -1109,7 +1109,7 @@ spec:
                   - hyperconverged-cluster-operator
                   env:
                   - name: OPERATOR_IMAGE
-                    value: quay.io/kubevirt/hyperconverged-cluster-operator:latest
+                    value: quay.io/kubevirt/hyperconverged-cluster-operator:v0.0.1
                   - name: OPERATOR_NAME
                     value: hyperconverged-cluster-operator
                   - name: POD_NAME
@@ -1120,7 +1120,7 @@ spec:
                     valueFrom:
                       fieldRef:
                         fieldPath: metadata.namespace
-                  image: quay.io/kubevirt/hyperconverged-cluster-operator:latest
+                  image: quay.io/kubevirt/hyperconverged-cluster-operator:v0.0.1
                   imagePullPolicy: Always
                   name: hyperconverged-cluster-operator
                   resources: {}
@@ -1154,12 +1154,12 @@ spec:
                   - "2"
                   env:
                   - name: OPERATOR_IMAGE
-                    value: kubevirt/virt-operator:latest
+                    value: kubevirt/virt-operator:v0.17.4
                   - name: WATCH_NAMESPACE
                     valueFrom:
                       fieldRef:
                         fieldPath: metadata.annotations['olm.targetNamespaces']
-                  image: kubevirt/virt-operator:latest
+                  image: kubevirt/virt-operator:v0.17.4
                   imagePullPolicy: IfNotPresent
                   name: virt-operator
                   ports:
@@ -1184,11 +1184,13 @@ spec:
             selector:
               matchLabels:
                 name: cdi-operator
+                operator.cdi.kubevirt.io: ""
             strategy: {}
             template:
               metadata:
                 labels:
                   name: cdi-operator
+                  operator.cdi.kubevirt.io: ""
               spec:
                 containers:
                 - env:
