--- a/deploy/converged/olm-catalog/kubevirt-hyperconverged/kubevirt-hyperconverged.package.yaml
+++ b/deploy/converged/olm-catalog/kubevirt-hyperconverged/kubevirt-hyperconverged.package.yaml
@@ -1,4 +1,5 @@
 packageName: kubevirt-hyperconverged
 channels:
-- name: alpha
-  currentCSV: kubevirt-hyperconverged-operator.v0.0.2
+- name: "0.0.1"
+  currentCSV: kubevirt-hyperconverged-operator.v0.0.1
+defaultChannel: "0.0.1"
